updated privacy banner

--- a/bathrooms.html
+++ b/bathrooms.html
@@ -14,7 +14,7 @@
   <link rel="icon" href="images/aptfavicon.png" type="image/png">
   <link rel="preload" as="image" href="images/bathroom-banner.png" importance="high" />
 
-  <
+  
   <meta property="og:title" content="Bathroom Services in Kent | A.P.T Builders">
   <meta property="og:description" content="Bathroom installations & renovations across Kent. Showers, plumbing, tiling, layout redesigns and more.">
   <meta property="og:image" content="https://www.aptbuilders.co.uk/images/ogimage.png">
@@ -85,7 +85,7 @@
       <a href="index.html">
         <img class="header-logo" src="images/aptlogo.png" alt="APT Logo">
       </a>   
-      <p class="head-title">Bathroom Services</p>
+      <h1 class="head-title">Bathroom Services</h1>
       <nav class="burger-nav">
         <!-- burger button -->
         <button id="burgerToggle" class="burger-toggle" aria-label="Toggle menu">
