--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
       <img class="header-logo" src="images/aptlogo.png">
       </a>   
   
-      <p class="head-title-main">A.P.T Builders</p>
+      <h1 class="head-title-main">A.P.T. Builders</h1>
       <nav class="burger-nav">
         <!-- burger button -->
         <button id="burgerToggle" class="burger-toggle" aria-label="Toggle menu">
