--- a/gallery-page1.html
+++ b/gallery-page1.html
@@ -47,7 +47,7 @@
     <img class="header-logo" src="images/aptlogo.png">
     </a>   
 
-    <p class="head-title">Roofing</p>
+    <h1 class="head-title">Roofing</h1>
  
 
     <nav class="burger-nav">
