--- a/gallery-page2.html
+++ b/gallery-page2.html
@@ -41,7 +41,7 @@
     <img class="header-logo" src="images/aptlogo.png">
     </a>   
 
-    <p class="head-title">Bathrooms</p>
+    <h1 class="head-title">Bathrooms</h1>
     <nav class="burger-nav">
       <!-- burger button -->
       <button id="burgerToggle" class="burger-toggle" aria-label="Toggle menu">
