--- a/gallery-page4.html
+++ b/gallery-page4.html
@@ -47,7 +47,7 @@
     <img class="header-logo" src="images/aptlogo.png">
     </a>   
 
-    <p class="head-title">Brickwork</p>
+    <h1 class="head-title">Brickwork</h1>
     <nav class="burger-nav">
       <!-- burger button -->
       <button id="burgerToggle" class="burger-toggle" aria-label="Toggle menu">
