--- a/gallery-page6.html
+++ b/gallery-page6.html
@@ -53,7 +53,7 @@
     <img class="header-logo" src="images/aptlogo.png">
     </a>   
 
-    <p class="head-title">Landscaping</p>
+    <h1 class="head-title">Landscaping</h1>
     <nav class="burger-nav">
       <!-- burger button -->
       <button id="burgerToggle" class="burger-toggle" aria-label="Toggle menu">
