--- a/gallery.html
+++ b/gallery.html
@@ -51,7 +51,7 @@
         <img class="header-logo" src="images/aptlogo.png">
         </a>   
     
-        <p class="head-title-main">Gallery</p>
+        <h1 class="head-title-main">Gallery</h1>
         <nav class="burger-nav">
           <!-- burger button -->
           <button id="burgerToggle" class="burger-toggle" aria-label="Toggle menu">
