--- a/index.html
+++ b/index.html
@@ -102,10 +102,11 @@
 
      <header>
       <div class="header">
+         
         <a href="index.html">
           <img class="header-logo" src="images/aptlogo.png" alt="APT Logo" />
         </a>
-        <p class="head-title-main">A.P.T Builders</p>
+        <h1 class="head-title-main">A.P.T Builders</h1>
         <nav class="burger-nav">
         
           <button id="burgerToggle" class="burger-toggle" aria-label="Toggle menu">
