--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -31,7 +31,7 @@
     <a href="index.html">
       <img class="header-logo" src="images/aptlogo.png" alt="APT Logo" />
     </a>
-    <p class="head-title-main">Privacy Policy</p>
+    <h1 class="head-title-main">Privacy Policy</h1>
     <nav class="burger-nav">
       <!-- burger button -->
       <button id="burgerToggle" class="burger-toggle" aria-label="Toggle menu">
@@ -91,12 +91,17 @@
   </div>
 
   <!-- Privacy Policy Banner -->
-  <div class="privacy-banner-wrapper">
-    <img src="images/privacy-banner.png" alt="Privacy Policy Banner" class="privacy-banner" />
-  </div>
-</header>
 
-   <h1 class="privacy-heading">Our Privacy Policy</h1>
+  <section class="service-banner-privacy">
+  <div class="banner-overlay-privacy">
+    <div class="banner-content">
+      <h1>HOW WE COLLECT YOUR DATA</h1>
+    </div>
+  </div>
+</section>
+
+
+  
    <main class="service-page">
    <section class="privacy-policy">
     
