--- a/roofing.html
+++ b/roofing.html
@@ -90,7 +90,7 @@
         <img class="header-logo" src="images/aptlogo.png">
         </a>   
     
-        <p class="head-title">Roofing Services</p>
+        <h1 class="head-title">Roofing Services</h1>
         <nav class="burger-nav">
           <!-- burger button -->
           <button id="burgerToggle" class="burger-toggle" aria-label="Toggle menu">
