--- a/brickwork.html
+++ b/brickwork.html
@@ -84,7 +84,7 @@
       <a href="index.html">
         <img class="header-logo" src="images/aptlogo.png" alt="APT Logo">
       </a>   
-      <p class="head-title">Brickwork Services</p>
+      <h1 class="head-title">Brickwork Services</h1>
       <nav class="burger-nav">
         <!-- burger button -->
         <button id="burgerToggle" class="burger-toggle" aria-label="Toggle menu">
