--- a/decorating.html
+++ b/decorating.html
@@ -85,7 +85,7 @@
       <a href="index.html">
         <img class="header-logo" src="images/aptlogo.png" alt="APT Logo">
       </a>   
-      <p class="head-title">Decorative Services</p>
+      <h1 class="head-title">Decorative Services</h1>
       <nav class="burger-nav">
         <!-- burger button -->
         <button id="burgerToggle" class="burger-toggle" aria-label="Toggle menu">
