--- a/gallery-page3.html
+++ b/gallery-page3.html
@@ -48,7 +48,7 @@
     <img class="header-logo" src="images/aptlogo.png">
     </a>   
 
-    <p class="head-title">Kitchens</p>
+    <h1 class="head-title">Kitchens</h1>
     <nav class="burger-nav">
       <!-- burger button -->
       <button id="burgerToggle" class="burger-toggle" aria-label="Toggle menu">
