--- a/gallery-page5.html
+++ b/gallery-page5.html
@@ -46,7 +46,7 @@
     <img class="header-logo" src="images/aptlogo.png">
     </a>   
 
-    <p class="head-title">Block Paving</p>
+    <h1 class="head-title">Block Paving</h1>
     <nav class="burger-nav">
       <!-- burger button -->
       <button id="burgerToggle" class="burger-toggle" aria-label="Toggle menu">
