--- a/gallery-page7.html
+++ b/gallery-page7.html
@@ -44,7 +44,7 @@
     <img class="header-logo" src="images/aptlogo.png">
     </a>   
 
-    <p class="head-title">Painting & Decorating</p>
+    <h1 class="head-title">Painting & Decorating</h1>
     <nav class="burger-nav">
       <!-- burger button -->
       <button id="burgerToggle" class="burger-toggle" aria-label="Toggle menu">
