--- a/kitchens.html
+++ b/kitchens.html
@@ -83,7 +83,7 @@
       <a href="index.html">
         <img class="header-logo" src="images/aptlogo.png" alt="APT Logo">
       </a>   
-      <p class="head-title">Kitchen Services</p>
+      <h1 class="head-title">Kitchen Services</h1>
       <nav class="burger-nav">
         <!-- burger button -->
         <button id="burgerToggle" class="burger-toggle" aria-label="Toggle menu">
