--- a/services.html
+++ b/services.html
@@ -39,7 +39,7 @@
         <img class="header-logo" src="images/aptlogo.png">
         </a>   
     
-        <p class="head-title-main"> Our Services</p>
+        <h1 class="head-title-main"> Our Services</h1>
         <nav class="burger-nav">
           <!-- burger button -->
           <button id="burgerToggle" class="burger-toggle" aria-label="Toggle menu">
